<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BarCode</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pressure_mbar">Pressure (mbar)</string>
    <string name="pressure_text">Pressure</string>
    <string name="button">Button</string>
    <string name="progess">progess</string>
    <string name="progress_input">progress_input</string>
    <string name="hz_text">hz</string>

</resources>
